# ipod-to-spotify

./: .gitignore  README.md  pyproject.toml
src/ipod_to_spotify/: cleanup.py  commands.py  device.py  env.py  main.py  metadata.py  spotify.py
