[project]
name = "ipod-to-spotify"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["mutagen (>=1.47.0,<2.0.0)"]

[tool.poetry]
packages = [{include = "ipod_to_spotify", from = "src"}]

[tool.poetry.scripts]
start = "ipod_to_spotify.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"